<resources>
    <string name="app_name">Health List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_view">DetailView</string>
    <string name="list_title">Health List</string>
    <string name="retry">Retry</string>
    <string name="failed_to_load">Failed to load Facilities, please try again later.</string>
    <string name="call">Call</string>
    <string name="send_e_mail">Send E-mail</string>
    <string name="open_website">Open Website</string>
    <string name="navigate">Navigate</string>
    <string name="order_a_z">Order A-Z</string>
    <string name="order_z_a">Order Z-A</string>
    <string name="get_closest_facility">Get Closest Facility</string>
    <string name="network_error">Failed to load content Online, used offline source.</string>
    <string name="location_request_error">Can\'t calculate closest Facility without access to the cellphone location</string>
</resources>
