<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rteixeira.healthlist.ListView">
    <item
        android:id="@+id/action_retry"
        android:orderInCategory="1"
        android:title="@string/retry"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_orderAZ"
        android:orderInCategory="10"
        android:title="@string/order_a_z"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_orderZA"
        android:orderInCategory="20"
        android:title="@string/order_z_a"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_getClosest"
        android:orderInCategory="30"
        android:title="@string/get_closest_facility"
        android:visible="false"
        app:showAsAction="never" />

</menu>
